--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,20 @@ a:hover {
     vertical-align: middle;
 }
 
+.main-header .logo img:hover {
+    transform: scale(1.3); 
+    transition: transform 0.3s ease; 
+}
+
+.main-footer {
+    background-color: transparent;
+    color: var(--colore-secondario); 
+    text-align: center;
+    padding: 20px 0;
+    margin-top: 40px;
+    border-top: 1px solid #ddd; 
+}
+
 .main-nav ul {
     list-style: none;
     display: flex;
